--- a/src/htmls/home.html
+++ b/src/htmls/home.html
@@ -1,16 +1,28 @@
-<!-- htmls/home.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
+  <!-- Agregamos Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #ffffff; /* Blanco */
+      color: #000000; /* Negro */
+    }
+    h1 {
+      color: #ff0000; /* Rojo */
+    }
+  </style>
 </head>
 <body>
-  <h1>Bienvenido, <%= usuario.nombre %></h1>
-
-  <script>
-    // Puedes usar la información del usuario aquí si es necesario
-  </script>
+  <div class="container">
+    <h1>Bienvenido, <%= usuario.nombre %></h1>
+  </div>
+  <!-- Agregamos Bootstrap JS al final del cuerpo -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
