--- a/src/htmls/form.html
+++ b/src/htmls/form.html
@@ -1,4 +1,3 @@
-<!-- form.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,12 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GLS Modify Shipment Form</title>
+  <!-- Agregamos Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body {
+      background-color: #ffffff; /* Blanco */
+      color: #000000; /* Negro */
+    }
+    form {
+      margin: 20px;
+    }
+    label {
+      color: #ff0000; /* Rojo */
+    }
+  </style>
 </head>
 <body>
   <form action="/gls/modify-shipment" method="POST">
-    <label for="orderId">Order ID:</label>
-    <input type="text" id="orderId" name="orderId" required>
-    <button type="submit">Modify Shipment</button>
+    <div class="form-group">
+      <label for="orderId">Order ID:</label>
+      <input type="text" class="form-control" id="orderId" name="orderId" required>
+    </div>
+    <button type="submit" class="btn btn-danger">Modify Shipment</button>
   </form>
+  <!-- Agregamos Bootstrap JS al final del cuerpo -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
