--- a/src/htmls/register.html
+++ b/src/htmls/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Registro</title>
   <!-- Agregamos Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
@@ -23,7 +23,7 @@
     #error-message {
       color: white;
       margin-bottom: 10px;
-      background-color: rgba(255, 0, 0, 0.6);
+      background-color: rgba(255, 0, 0, 0.8); /* Color de fondo rojo con opacidad */
       padding: 14px;
       border-radius: 4px;
     }
@@ -31,9 +31,9 @@
 </head>
 <body>
   <div class="container">
-    <h2>Login</h2>
+    <h2>Registro</h2>
     <div id="error-message"></div>
-    <form action="/users/login" method="post">
+    <form action="/users/register" method="post">
       <div class="form-group">
         <label for="username">Usuario:</label>
         <input type="text" class="form-control" id="username" name="username" required>
@@ -42,9 +42,9 @@
         <label for="password">Contraseña:</label>
         <input type="password" class="form-control" id="password" name="password" required>
       </div>
-      <button type="submit" class="btn btn-danger">Iniciar sesión</button>
+      <button type="submit" class="btn btn-success">Registrar</button>
     </form>
-    <p>No tienes cuenta? <a href="/users/register">Regístrate aquí</a></p>
+    <p>¿Ya tienes una cuenta? <a href="/users/login">Inicia sesión aquí</a></p>
   </div>
   <!-- Agregamos Bootstrap JS al final del cuerpo -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
