--- a/src/htmls/login.html
+++ b/src/htmls/login.html
@@ -20,50 +20,26 @@
     label {
       color: #ff0000; /* Rojo */
     }
-    #error-message {
-      color: white;
-      margin-bottom: 10px;
-      background-color: rgba(255, 0, 0, 0.6);
-      padding: 14px;
-      border-radius: 4px;
-    }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Login</h2>
-    <div id="error-message"></div>
     <form action="/users/login" method="post">
       <div class="form-group">
         <label for="username">Usuario:</label>
-        <input type="text" class="form-control" id="username" name="username" required>
+        <input type="text" class="form-control" id="username" name="nombreUsuario" required>
       </div>
       <div class="form-group">
         <label for="password">Contraseña:</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+        <input type="password" class="form-control" id="password" name="contrasena" required>
       </div>
       <button type="submit" class="btn btn-danger">Iniciar sesión</button>
     </form>
-    <p>No tienes cuenta? <a href="/users/register">Regístrate aquí</a></p>
   </div>
   <!-- Agregamos Bootstrap JS al final del cuerpo -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script>
-    // Función para mostrar mensajes de error
-    function showError(message) {
-      document.getElementById('error-message').innerText = message;
-    }
-
-    // Obtener el mensaje de error de la URL (si existe)
-    const urlParams = new URLSearchParams(window.location.search);
-    const errorMessage = urlParams.get('error');
-
-    // Mostrar el mensaje de error
-    if (errorMessage) {
-      showError(decodeURIComponent(errorMessage));
-    }
-  </script>
 </body>
 </html>
