--- a/src/htmls/shopify.html
+++ b/src/htmls/shopify.html
@@ -53,6 +53,10 @@
     .newclient{
       width: 130px !important;
     }
+
+    .import-orders{
+      width: 230px;
+    }
   </style>
 </head>
 <body>
@@ -72,6 +76,9 @@
 
   <div class="container d-flex justify-content-between">
     <h2>Shopify</h2>
+    <button type="button" class="btn btn-primary import-orders" data-toggle="modal" data-target="#importModal">
+      Importar Pedidos Unfulfilled
+    </button>
     <button type="button" class="btn btn-success newclient" onclick="redirectToNewCustomer()">Nuevo Cliente</button>
   </div>
   <div id="clientsTableContainer" class="container">
@@ -92,6 +99,28 @@
           <!-- Los datos de la tabla se llenarán aquí mediante JavaScript -->
         </tbody>
       </table>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="importModal" tabindex="-1" role="dialog" aria-labelledby="importModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="importModalLabel">Importar Pedidos Unfulfilled</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Selecciona la tienda de la que deseas importar pedidos:</p>
+            <div id="importButtonsContainer">
+              <!-- Aquí se agregarán dinámicamente los botones para importar de cada tienda -->
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <footer>
@@ -146,9 +175,36 @@
             </tbody>
           </table>
         `;
+
+         // Construir los botones de importación y agregarlos al contenedor en el modal
+        const importButtonsContainer = document.getElementById('importButtonsContainer');
+        importButtonsContainer.innerHTML = data.map(cliente => `
+          <button type="button" class="btn btn-primary" onclick="importUnfulfilledOrders('${cliente.NombreEndpoint}')">
+            Importar de ${cliente.NombreEndpoint}
+          </button>
+        `).join('');
       } catch (error) {
         console.error('Error al obtener y mostrar los clientes:', error);
       }
+    }
+
+    async function importUnfulfilledOrders(storeName) {
+      alert(`Importar pedidos unfulfilled de la tienda: ${storeName}`);
+      try {
+          const token = getCookie2('token');
+          const response = await fetch("/shopify/${storeName}/orders/unfulfilled", {
+            method: "GET",
+            headers: {
+              "Authorization": `Bearer ${token}`
+            }
+          });
+          if (!response.ok) {
+            throw new Error('Hubo un problema.');
+          }
+
+        } catch (error) {
+          console.error('Error: ', error);
+        }
     }
 
     function getCookie2(name) {
