--- a/src/htmls/login.html
+++ b/src/htmls/login.html
@@ -44,7 +44,7 @@
       </div>
       <button type="submit" class="btn btn-danger">Iniciar sesión</button>
     </form>
-    <p>No tienes cuenta? <a href="/users/register">Regístrate aquí</a></p>
+    <!--<p>No tienes cuenta? <a href="/users/register">Regístrate aquí</a></p>-->
   </div>
   <!-- Agregamos Bootstrap JS al final del cuerpo -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
