--- a/src/htmls/addcustomermagento.html
+++ b/src/htmls/addcustomermagento.html
@@ -116,6 +116,12 @@
     </label>
     <input type="text" id="ConsumerKey" name="ConsumerKey" required>
 
+    <label id="ConsumerSecretLabel" for="ConsumerSecret">ConsumerSecret:
+      <span class="info-icon" data-tippy-content="Ingrese el ConsumerSecret, esto lo encontraras en las settings de la tienda en Magento.">ℹ️</span>
+    </label>
+    <input type="text" id="ConsumerSecret" name="ConsumerSecret" required>
+
+
     <label id="AccessTokenLabel" for="AccessToken">AccessToken:
         <span class="info-icon" data-tippy-content="Ingrese el AccessToken, esto lo encontraras en las settings de la tienda en Magento.">ℹ️</span>
     </label>
