--- a/src/htmls/home.html
+++ b/src/htmls/home.html
@@ -70,7 +70,7 @@
     <div class="btn-group" role="group">
       <button type="button" class="btn btn-primary" onclick="redirectToShopify()">Shopify</button>
       <button type="button" class="btn btn-primary" onclick="redirectToGLS()"">GLS</button>
-      <button type="button" class="btn btn-primary" onclick="redirectToMagento()"">WooCommerce</button>
+      <button type="button" class="btn btn-primary" onclick="redirectToMagento()"">Magento</button>
       <button type="button" class="btn btn-primary" onclick="redirectToWooCommerce()"">WooCommerce</button>
     </div>
   </div>
