--- a/src/htmls/home.html
+++ b/src/htmls/home.html
@@ -72,7 +72,7 @@
       <button type="button" class="btn btn-primary" onclick="redirectToGLS()"">GLS</button>
       <button type="button" class="btn btn-primary" onclick="redirectToMagento()"">Magento</button>
       <button type="button" class="btn btn-primary" onclick="redirectToWooCommerce()"">WooCommerce</button>
-      <button type="button" class="btn btn-primary" onclick="redirectToConfig()"">Config</button>
+      <button type="button" class="btn btn-primary" onclick="redirectToConfig()"">DashBoard</button>
     </div>
   </div>
     <footer>
